--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sunrise Hostel</title>
+  <title>Sunrise Hostel in Kohima science college| Affordable Boys Hostel Near City</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -49,3 +49,4 @@
   </footer>
 </body>
 </html>
+
