Enhance contact.html with centered text styling
Updated contact page layout and styles for better presentation.

--- a/contact.html
+++ b/contact.html
@@ -20,29 +20,19 @@
   </header>
 
   <section class="content">
-    <h2>Contact & Booking</h2>
-    <p>We’d love to hear from you! Reach out for bookings or inquiries.</p>
+    <h2 style="text-align:center;">Contact & Booking</h2>
+    <p style="text-align:center;">Wed love to hear from you! Reach out for bookings or inquiries.</p>
 
-    <form>
-      <label for="name">Name:</label><br>
-      <input type="text" id="name" name="name" required><br><br>
 
-      <label for="email">Email:</label><br>
-      <input type="email" id="email" name="email" required><br><br>
 
-      <label for="message">Message:</label><br>
-      <textarea id="message" name="message" rows="5" required></textarea><br><br>
-
-      <button type="submit">Send</button>
-    </form>
-
-    <h3>Our Location</h3>
-    <p>123 Sunrise Street, City Center</p>
-    <p>Email: info@sunrisehostel.com | Phone: +123 456 7890</p>
+    <h3 style="text-align:center;">Our Location</h3>
+    <p style="text-align:center;">123 Sunrise Street, City Center</p>
+    <p style="text-align:center;">Email: info@sunrisehostel.com | Phone: +123 456 7890</p>
   </section>
 
   <footer>
-    <p>&copy; 2026 Sunrise Hostel | All Rights Reserved</p>
+    <p style="text-align:center;">&copy; 2026 Sunrise Hostel | All Rights Reserved</p>
   </footer>
 </body>
 </html>
+
